# fb2lib

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  fb2-612000-614999.txt  fb2lib.ipr  fb2lib.iws  initDB.sh  lib.rus.ec.db  list.txt  reinitDB.sh  report.txt  res.txt
db/: fb2lib.db  fb2lib.sqbpro  schema.sql
reports/: accepted_books.txt  fb2-000065-572310.txt  fb2-545000-549999.txt  fb2-612000-614999.books.sorted.txt  fb2-612000-614999.books.txt  fb2-612000-614999.txt  files.txt  genres.txt  genres_accepted.txt  genres_tbd.txt
scripts/: cleanup_DB_and_load_langs.sh  cleanup_DB_and_load_torrents.sh  enable_only_russian_languages.sh
sql/: people_view
src/: main.rs
src/lib/: algorithm.rs  archive.rs  book.rs  data.rs  fb.rs  filesystem.rs  helper.rs  iconv.rs  lib.rs  out.rs  parser.rs  pipe.rs  queries.rs  result.rs  sal.rs  subcommands.rs  tables.rs  tools.rs
src/lib/fb/: author.rs  book_name.rs  book_title.rs  city.rs  date.rs  description.rs  document_info.rs  fictionbook.rs  first_name.rs  genre.rs  isbn.rs  lang.rs  last_name.rs  middle_name.rs  mod.rs  nickname.rs  program_used.rs  publish_info.rs  publisher.rs  (+6 more)
wrong/: 10017.fb2.xml  14577.fb2.xml  20470.fb2.xml  20471.fb2.xml  20478.fb2.xml  20481.fb2.xml  20482.fb2.xml  20486.fb2.xml  20488.fb2.xml  20491.fb2.xml  23232.fb2.xml  23362.fb2.xml  23363.fb2.xml  23365.fb2.xml  23368.fb2.xml  23369.fb2.xml  23370.fb2.xml  23371.fb2.xml  23376.fb2.xml  23379.fb2.xml  23380.fb2.xml  23383.fb2.xml  23384.fb2.xml  23386.fb2.xml  23389.fb2.xml  25453.fb2.xml  25608.fb2.xml  7331.fb2.xml  8647.fb2.xml
(+53 files in other folders)
