[package]
name = "fb2lib"
version = "0.5.0"
authors = ["seb-odessa <seb@ukr.net>"]

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
    zip = { git = "https://github.com/seb-odessa/zip-rs.git" }
    fb2parser = { git = "https://github.com/seb-odessa/fb2parser.git" }
    rusqlite = "*"
    time = "*"
    clap = "*"
    regex = "*"
    crossbeam = "*"



