[package]
name = "fb2lib"
version = "0.6.7"
authors = ["seb-odessa <seb@ukr.net>"]
build = "build.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
    zip = { git = "https://github.com/seb-odessa/zip-rs.git" }
    fb2parser = { git = "https://github.com/seb-odessa/fb2parser.git" }
    torrent = { git = "https://github.com/seb-odessa/torrent-rs.git" }
    rusqlite = "*"
    rust-crypto = "*"
    time = "*"
    clap = "*"
    regex = "*"
    crossbeam = "*"
    bincode = "*"
    rustc-serialize = "*"



